--- a/css/packs.css
+++ b/css/packs.css
@@ -1,382 +1,512 @@
 /* FUENTES */
 
-@font-face{
-    font-family: "MonserratFontCustom";
-    src: url("fonts/Montserrat/Montserrat-Regular.ttf");
+@font-face {
+  font-family: "MonserratFontCustom";
+  src: url("fonts/Montserrat/Montserrat-Regular.ttf");
 }
 
-@font-face{
-    font-family: "MonserratBold";
-    src: url("fonts/Montserrat/Montserrat-BoldItalic.ttf");
+@font-face {
+  font-family: "MonserratBold";
+  src: url("fonts/Montserrat/Montserrat-BoldItalic.ttf");
 }
 
-@font-face{
-    font-family: "icons";
-    src: url("fonts/web-symbols/websymbols-regular-webfont.svg#WebSymbolsRegular") format('svg'),
-        url("fonts/web-symbols/websymbols-regular-webfont.eot");
-    src: url("fonts/web-symbols/websymbols-regular-webfont.eot#iefix") format("embedded-opentype"),
-        url("fonts/web-symbols/websymbols-regular-webfont.woff") format("woff"),
-        url("fonts/web-symbols/websymbols-regular-webfont.ttf") format("truetype");  
-    font-weight:normal;
-    font-style:normal;
+@font-face {
+  font-family: "icons";
+  src: url("fonts/web-symbols/websymbols-regular-webfont.svg#WebSymbolsRegular")
+      format("svg"),
+    url("fonts/web-symbols/websymbols-regular-webfont.eot");
+  src: url("fonts/web-symbols/websymbols-regular-webfont.eot#iefix")
+      format("embedded-opentype"),
+    url("fonts/web-symbols/websymbols-regular-webfont.woff") format("woff"),
+    url("fonts/web-symbols/websymbols-regular-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-
 
 /* RESET */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
-
 
 /* NAV */
-#header{
-    margin: 0px;
-    width: 100%;
-
+#header {
+  margin: 0px;
+  width: 100%;
 }
 
-.navList{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    background: #000000;
-    padding: 7px;
-    height: 70px;
-    list-style: none;
+.navList {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  background: #000000;
+  padding: 7px;
+  height: 70px;
+  list-style: none;
 }
 
-.main-activity{
-    display: flex;
-    justify-content: center;
-    margin: 10px;
+.main-activity {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
 }
-.logo-act{
-    padding-right: 10px;
+.logo-act {
+  padding-right: 10px;
 }
 
 .navA {
-    color: #cccccc;
-    text-decoration: none;
-  }
+  color: #cccccc;
+  text-decoration: none;
+}
 
 /* FIN NAV */
 /* CONTENIDO */
 
-
 /* ----------------ESTILOS PACK-CURSOS------------- */
-#header-pack-img{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 500px;
-    background-image: url("../img/skate.jpg");
-    margin: 0px;
-    justify-content: center;
-    font-size: 30px;
-    line-height: 700px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 0px;
-    
+#header-pack-img {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 500px;
+  background-image: url("../img/skate.jpg");
+  margin: 0px;
+  justify-content: center;
+  font-size: 30px;
+  line-height: 700px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 0px;
 }
 
-#promo-container{
-    display: flex;
-    width: 100%;
-    flex-flow: row wrap;
-    justify-content: center;
-    margin-top: 40px;
-    
-    
-
+#promo-container {
+  display: flex;
+  width: 100%;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin-top: 40px;
 }
 
-.optional-activities{
-    display: flex;
-    flex-direction: row wrap;
-    width: 100%;
-    justify-content: center;
-    margin: 5px;
-
+.optional-activities {
+  display: flex;
+  flex-direction: row wrap;
+  width: 100%;
+  justify-content: center;
+  margin: 5px;
 }
 
-.main-activity{
-    display: flex;
-    flex-direction: row wrap;
-    width: 20%;
-    font-family: "MonserratBold";
-    font-size: 20px;
-    color: #637D96;
-    padding: 10px;
-    border-bottom: 1px solid #637D96;
-    transition: all 300ms;
-    margin-bottom:30px;
-
+.main-activity {
+  display: flex;
+  flex-direction: row wrap;
+  width: 20%;
+  font-family: "MonserratBold";
+  font-size: 20px;
+  color: #637d96;
+  padding: 10px;
+  border-bottom: 1px solid #637d96;
+  transition: all 300ms;
+  margin-bottom: 30px;
 }
-.main-activity:hover{
-    font-size: 25px;
-    color: #000000;
-    border-bottom: 3px solid #000000;
-    
-    
+.main-activity:hover {
+  font-size: 25px !important;
+  color: #000000 !important;
+  border-bottom: 3px solid #000000 !important;
 }
-
-
-.button-wrapper{
-    display: flex;
-    flex-direction: row wrap;
-    width: auto;
-    align-items: center;
-    justify-content: center;
-    background-color: #FFFFFF;
-    border-radius: 15px;
-    box-shadow: 1px 2px 1px 1px rgb(0 0 0 / 30%);
-    border-radius: 15px;
-    padding: 5px;
-}
-    
-
-.but-course{
-    padding: 10px;
-    border-radius: 15px;
-    width: 200px;
-    font-weight: bold;
-    color: #000000;
-    background-color: #FFFFFF;
-    border: none;
-    font-family:"MonserratBold";
+.activity-type {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
 }
 
-
-
-.activity-type{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
+.button-wrapper {
+  display: flex;
+  flex-direction: row wrap;
+  width: auto;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border-radius: 15px;
+  box-shadow: 1px 2px 1px 1px rgb(0 0 0 / 30%);
+  border-radius: 15px;
+  padding: 5px;
 }
 
-#activity-description{
-    display: flex;
-    flex-flow: row wrap;
-    width: 100%;
-    justify-content: center;
-    margin-left: 30px;
-    min-height: 900px;
+.but-course {
+  padding: 10px;
+  border-radius: 15px;
+  width: 200px;
+  font-weight: bold;
+  color: #000000;
+  background-color: #ffffff;
+  border: none;
+  font-family: "MonserratBold";
 }
 
-/* --------------FIN CONTENIDOS CURSOS---------------- */
-#courses-container{
+#activity-description {
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+  justify-content: center;
+  margin-left: 30px;
+  min-height: 900px;
+}
+.youtube-container {
+  display: flex;
+  flex-direction: row wrap;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  
+  margin:10px;
+  padding: 10px;
+
+}
+.youtube{
     display: flex;
     flex-direction: row wrap;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-
-    padding: 10px;
-}
-.course{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: flex-start;
-    align-items: center;
-    width: 20%;
-    height: auto;
-    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
-    margin: 30px;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.card{
-    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
-}
-
-.card:hover{
-    transform: scale(1.15);
-
-}
-
-.textp{
-    font-family: "MonserratItalic" !important;
-}
-.level-course{
-    display: flex;
-    flex-direction: row wrap;
-    width: 90%;
-    height: 100px;
-    margin: 10px;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-.title-course{
-    font-family: "MonserratBold";
-    font-size: 20px;
-    width: 90%;
-    justify-content: center;
     text-align: center;
-}
-.line-through{
-    font-family: sans-serif !important;
-    text-decoration: line-through;
-}
-.saved-course{
-    display: flex;
-    flex-direction: row wrap;
     justify-content: center;
-    align-items: center;
-    width: 90%;
-    height: 70px;
+}
 
+.youtube-container img {
+  width: 100%;
+  border-radius: 50%;
+}
+.youtube-icon {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  transition: transform ease-in-out 150ms;
+}
+.youtube:hover .youtube-icon::before {
+    opacity: 1;
+  }
+.youtube:hover .youtube-icon {
+  transform: translateY(-10%);
+}
+.youtube .youtube-icon:hover {
+  transform: translateY(-10%) scale(1.2);
+}
+.youtube-icon::before,
+.youtube-icon::after {
+  
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  border-radius: 50%;
+}
+
+.youtube-icon::before {
+  content: "\f144";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  background: #f00;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  color: white;
+  transition: opacity 75ms linear, background-color 100ms linear;
+}
+
+.youtube-icon::before {
+  background: #cc0202;
+}
+.youtube-icon::after {
+  background: #f00;
+  z-index: 1;
+  animation: pulse 1250ms infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+    opacity: 0.75;
+  }
+  100% {
+    transform: scale(1.35);
+    opacity: 0;
+  }
+}
+.youtube-icon-description{
     font-family: "MonserratBold";
-    
 }
 
-.saved-div{
-    background-color: blueviolet;
-    color: #FFFFFF;
-    padding: 10px;
-    border-radius: 15px;
-    margin: 5px;
-    justify-content: center;
-}
-.price-course{
-    display: flex;
-    width: 90%;
-    font-family: "MonserratBold";
-    font-size: 30px;
-    justify-content: center;
-    
+/* --------------FIN CONTENIDOS Actividades---------------- */
+#courses-container {
+  display: flex;
+  flex-direction: row wrap;
+  justify-content: center;
+  width: 100%;
+  height: auto;
 
+  padding: 10px;
 }
-.euros-course{
-    font-size: 50px;
-    padding: 5px;
-
+.container-row {
+  max-width: 1240px !important;
 }
-.button-course{
-    display: flex;
-    flex-direction: row;
-    width: 90%;
-    justify-content: center;
-
+.course {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: flex-start;
+  align-items: center;
+  width: 20%;
+  height: auto;
+  box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
+  margin: 30px;
+  border-radius: 10px;
+  padding: 10px;
 }
-
-.but-book{
-    font-family: "MonserratBold";
-    width: 200px;
-
-}
-.list-description{
-    display: flex;
-    flex-flow: column wrap;
-
-    
-    
-}
-.description-course-wrapper{
-    margin: 10px;
-}
-.description-info{
-    padding: 10px;
-}
-.element-description{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    margin: 10px;
-    font-size: 25px;
-    font-family: "MonserratItalic";
- 
-}
-.thumb-green{
-    color: yellowgreen;
+.saved-div:hover {
+  box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
 }
 
+.card {
+  box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
+}
+
+.card:hover {
+  transform: scale(1.15);
+}
+
+.textp {
+  font-family: "MonserratItalic" !important;
+}
+
+/* CARD COURSES */
+.level-course {
+  display: flex;
+  flex-direction: row wrap;
+  width: 90%;
+  height: 100px;
+  margin: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-course {
+  font-family: "MonserratBold";
+  font-size: 20px;
+  width: 90%;
+  justify-content: center;
+  text-align: center;
+}
+
+.line-through {
+  font-family: sans-serif !important;
+  text-decoration: line-through;
+}
+.saved-course {
+  display: flex;
+  flex-direction: row wrap;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: 70px;
+
+  font-family: "MonserratBold";
+}
+
+.saved-div {
+  background-color: blueviolet;
+  color: #ffffff;
+  padding: 10px;
+  border-radius: 15px;
+  margin: 5px;
+  justify-content: center;
+}
+.price-course {
+  display: flex;
+  width: 90%;
+  font-family: "MonserratBold";
+  font-size: 30px;
+  justify-content: center;
+}
+.euros-course {
+  font-size: 50px;
+  padding: 5px;
+}
+.button-course {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  justify-content: center;
+}
+
+.but-book {
+  font-family: "MonserratBold";
+  width: 200px;
+  box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
+}
+.list-description {
+  display: flex;
+  flex-flow: column wrap;
+}
+.description-course-wrapper {
+  margin: 10px;
+}
+.description-info {
+  padding: 10px;
+}
+.element-description {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin: 10px;
+  font-size: 25px;
+  font-family: "MonserratItalic";
+}
+.thumb-green {
+  color: yellowgreen;
+}
 
 /* FIN ESTILOS CONTENIDO*/
 
 /* Footer */
-footer{
-    border: 1px solid yellow;
-    padding: 50px;
-    background-color: #000;
-    color: white;
+footer {
+  border: 1px solid yellow;
+  padding: 50px;
+  background-color: #000;
+  color: white;
 }
-.footer-container{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    padding: 10px;
-    border: 1px solid blue;
+.footer-container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  padding: 10px;
+  border: 1px solid blue;
 }
 /*Footer left*/
 .footer-left {
-    margin-right: 1.25em;
-    margin-bottom: 2em;
-    border: 1px solid green;
-
+  margin-right: 1.25em;
+  margin-bottom: 2em;
+  border: 1px solid green;
 }
 .footer-left img {
-    width: 50%;
-    padding-top: 35px;
+  width: 50%;
+  padding-top: 35px;
 }
 
-.footer ul{
-    list-style: none;
-    padding-left: 0;
+.footer ul {
+  list-style: none;
+  padding-left: 0;
 }
 
-.footer a{
-    text-decoration: none;
+.footer a {
+  text-decoration: none;
 }
 /*Footer Right*/
 .footer-right {
-    width: 50%;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    padding: 5px 50px;
-    border: 1px solid red;
-
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  padding: 5px 50px;
+  border: 1px solid red;
 }
-
-
 
 /* Footer bottom*/
 .footer-bottom {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 .footer-bottom-left {
-    text-align: left;
-    padding-top: 70px;
-    box-sizing: border-box;
+  text-align: left;
+  padding-top: 70px;
+  box-sizing: border-box;
 }
 .footer-bottom-right {
-    text-align: right;
-    padding-top: 70px;
-    box-sizing: border-box;
-
+  text-align: right;
+  padding-top: 70px;
+  box-sizing: border-box;
 }
 
 /*@media screen and (min width: 600px){
