--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,18 @@
     font-weight:normal;
     font-style:normal;
 }
+@font-face{
+    font-family: "Rye";
+    src: url("fonts/Rye/Rye-Regular.ttf");
+}
+@font-face{
+    font-family: "BungeeShade";
+    src: url("fonts/Bungee_Shade/BungeeShade-Regular.ttf");
+}
+@font-face{
+    font-family: "PermanentMaker";
+    src: url("fonts/Permanent_Marker/PermanentMarker-Regular.ttf");
+}
 
 .bold{
     font-family: "MonserratBold";
@@ -42,6 +54,7 @@ body{
     padding: 0px;
     text-decoration: none;
     font-family: "MonserratFontCustom";
+
 
 }
 h2 h1{
@@ -101,13 +114,17 @@ a:hover{
 }
 
 
-
+.header-container-index{
+    display: flex;
+    width: 100%;
+}
 .header-index-img{
     display: flex;
     align-items: center;
+    justify-content: center;
     width: 100%;
     height: 500px;
-    background-image: url("../img/adventure.jpg");
+    background-image: url("../img/boxPark.jpg");
     margin: 0px;
     justify-content: center;
     font-size: 30px;
@@ -116,21 +133,59 @@ a:hover{
     background-position: center;
     background-repeat: no-repeat;
     padding: 0px;
+    
 
 
 }
+@keyframes backBanner{
+    0%{
+        background-position: 0px 0px;
 
+    }
+    100%{
+        background-position: -200px -200px;
+
+    }
+}
 
 .header-text-container{
-    font-family: "MonserratBold";
+    display: flex;
+    font-family: "Rye";
     transition: all 300ms;
+    width: 30%;
+    justify-content: center;
+    animation: showText 10s linear;
    
 
+}
+@keyframes showText{
+    0%{
+        transform: translateX(-200%) scale(5,5);
+        opacity:1;
+    }
+    50%{
+        transform: translateX(200%) scale(5,5);
+        opacity:1;   
+    }
+    75%{
+        transform: translateX(-100%) scale(5,5);
+        text-shadow: none;
+        color: transparent;
+        opacity:0;
+    }
+    100%{
+        transform: translateX(0%) scale(1,1);
+        text-shadow: 2px 2px 1px black;
+        color:white;
+        opacity:1;
+    }
 }
 
 .header-text-container:hover{
     transform: scale(1.15);
     color: #FEFEFE;
+
+
 }
 
 
@@ -141,6 +196,7 @@ a:hover{
     width: 90%;
     height: 500px;
     margin: 20px;
+    
  
 }
 .img-container{
@@ -148,14 +204,22 @@ a:hover{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    
 
+}
+.img-box{
+    position: relative;
+    margin-left: 400px;
+    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
+   
 }
 
 .img-one{
-    background-image: url("../img/boxPark.jpg")  !important;
+    background-image: url("../img/adventure.jpg")  !important;
 }
 .img-two{
     background-image: url("../img/surf.jpg");
+    
 }
 
 .img-three{
@@ -173,17 +237,12 @@ a:hover{
     margin-left: -30%;
     padding: 2%;
     transition: all 300ms;
-
+    
 }
 
 .box:hover{
     transform: scale(1.15);
 
-}
-.img-box{
-    position: relative;
-    margin-left: 400px;
-    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
 }
 
 
