--- a/css/footer.css
+++ b/css/footer.css
@@ -1,128 +1,153 @@
-/* FOOTER */
+
+/* ---------------FOOTER-------- */
+
+
 
 footer{
     /*border: 1px solid yellow;*/
     background-color: #000;
+    width: 100%;
     color: white;
-}
-.footer-container{
+    height: auto;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+  }
+  .footer-container{
     display: flex;
     justify-content: space-around;
     flex-direction: row;
+    width: 100%;
     padding: 10px;
     /*border: 1px solid blue;*/
-}
-
-
-/*Footer left*/
-.footer-left {
-    box-sizing: border-box;
-    width: 30%;
-    /*border: 1px solid green;*/
-
-}
-/*Footer left sponsors*/
-.footer-left-sponsors {
-    display: block;
-
-    /*border: 1px  solid red;*/
-    box-sizing: border-box;
-}
-.sponsors-container-footer-left{
+    margin-top: 20px;
+  }
+  
+  .footer-section-wrapper{
     display: flex;
-    justify-content: space-evenly;
-}
-#sponsor-1{
-    width: 100px;
-    height: 19px;
-    /*border: 1px solid red;*/
-}
-#sponsor-2{
-    box-sizing: border-box;
-    width: 37px;
-    height: 50px;
-}
-
-#sponsor-3{
-    box-sizing: border-box;
-    width: 75px;
-    height: 45px;
-    }
-    
-
-.footer ul{
-    list-style: none;
-    padding-left: 0;
-}
-
-.footer a{
-    text-decoration: none;
-}
-/*Footer Right*/
-.footer-right {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    
-    padding: 5px 50px;
-    /*border: 1px solid red;*/
-
-}
-.footer-right-article-title{
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: 150px;
+  }
+  
+  
+  .title-footer-section{
     text-decoration: underline;
     
-}
-
-.footer-right-article{
-
-}
-
-#footer-links:hover{
+  }
+  
+  
+  #footer-links:hover{
     color: #7289DA;
-}
-.right-article-item {
+  }
+  .right-article-item {
     padding: 3px 2px;
-}
-/* Footer bottom*/
-.footer-bottom {
+    max-width: 200px;
+  }
+  
+  
+  .fa {
+    padding: 5px;
+    color:white;
+  }
+  
+  
+  /* FOOTER CONTACT */
+  .right-article-item iframe{
+    width:100%;
+    height: 150px;
+    margin-top: 10px;
+    border-radius: 5px;
+    border:5px solid white;
+    box-shadow: 0px 0px 5px gray;
+  }
+  
+  
+  /*Footer sponsors*/
+  .sponsors-wrapper-container{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    align-items: center;
+    
+  
+  }
+  .sponsors-wrapper{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    padding: 15px;
+    
+  
+  }
+  .logo-sponsor-section{
+    display: flex;
+    justify-content: center;
+    
+  
+  }
+  .sponsor{
+    padding: 15px;
+  }
+  #sponsor-1{
+    width: 100px;
+    height: 19px;
+    margin-top: 10px;
+    /*border: 1px solid red;*/
+  }
+  #sponsor-2{
+    
+    width: 37px;
+    height: 50px;
+  }
+  
+  #sponsor-3{
+    width: 75px;
+    height: 45px;
+  }
+  #sponsors-section{
+    align-items: center;
+  }
+  
+  
+  /* Footer bottom*/
+  .footer-bottom {
     display: flex;
     justify-content: space-around;
     /*border: 1px dotted red;*/
     margin-top: 30px;
-}
-.footer-bottom-left {
+  }
+  .footer-bottom-left {
     text-align: left;
     padding-top: 5px;
     box-sizing: border-box;
     /*border: 1px dotted blue*/
-}
-.footer-bottom-right {
+  }
+  .footer-bottom-right {
     text-align: right;
     padding-top: 5px;
     /*border: 1px dotted green;*/
-
-}
-
-.fa {
-    padding: 5px;
-    color:white;
-}
-/*RESPONSIVE*/
-@media (max-width: 968px) {
+  
+  }
+  
+  #bottom-section{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  @media (max-width: 1114px){
     .footer-container{
-        display: flex;
-        flex-direction: column-reverse;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
-    .footer-right{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    .footer-section-wrapper{
+      width: 400px;
+      align-items: center;
+      
+  
+      
     }
-    .footer-left-sponsors {
-        display: none;
-    }
-
-    .footer-right-article{
-    }
-
-}
+  }
