--- a/css/styles.css
+++ b/css/styles.css
@@ -68,8 +68,9 @@ h2 h1{
 
     text-decoration: none;
     justify-content: center;
-    color: #FFFFFF;
+    color: black;
     text-shadow: 0px 2px 2px #333;
+    margin-bottom: 15%;
 }
 
 #title-header:hover{
@@ -125,7 +126,8 @@ a:hover{
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 1300px;
+    /*height: 1300px;*/
+    height:90vh;
     background-image: url("../img/boxPark.jpg");
     margin: 0px;
     justify-content: center;
@@ -137,6 +139,7 @@ a:hover{
     padding: 0px;
 
 }
+/*  
 @keyframes backBanner{
     0%{
         background-position: 0px 0px;
@@ -147,7 +150,7 @@ a:hover{
 
     }
 }
-
+*/
 
 .header-text-container{
     display: flex;
@@ -155,11 +158,11 @@ a:hover{
     transition: all 300ms;
     width: 100%;
     justify-content: center;
-    animation: showText 5s linear;
+    /* animation: showText 5s linear; */
    
 
 }
-@keyframes showText{
+/* @keyframes showText{
     0%{
         transform: translateX(-200%) scale(5,5);
         opacity:1;
@@ -180,7 +183,7 @@ a:hover{
         color:white;
         opacity:1;
     }
-}
+} */
 
 .header-text-container:hover{
     transform: scale(1.15);
@@ -266,8 +269,9 @@ a:hover{
 .header-nav{
     display: flex;
     width: 100%;
+    height: 10vh;
     flex-flow: row wrap;
-    height: auto;
+    /*height: auto;*/
     align-items: center;
     background:#000000;
     justify-content: space-between;
@@ -280,10 +284,12 @@ a:hover{
     font-family: "Rye";
     
 }
-
+.nav-logo{
+    height: 100%;
+}
 .img-nav{
-    height: 150px;
-    margin-left: 10px;
+    height: 100%;
+    margin-left: 10%;
 
 }
   
@@ -303,7 +309,8 @@ a:hover{
     border-radius: 15px;
     background:rgba(0, 0, 0, 0.4);
     background:#fff;
-    padding:20px 20px; 
+    /*padding:20px 20px;*/ 
     color:#1b1b1b;
+    transition: background-color 0.5s;
   }
 
