--- a/css/boxpark.css
+++ b/css/boxpark.css
@@ -189,7 +189,6 @@ body ::selection {
 
 .learn-more {
     color: black;
-    border-bottom: 2px solid  black;
 }
 
 .learn-more:hover{
@@ -199,7 +198,7 @@ body ::selection {
 
 /*STRIP SECTION*/
 .strip-container{
-    background-color: #E8E3D9;
+    background-color: white;
     width: 100%;
     height: 300px;
     display: flex;
@@ -248,14 +247,22 @@ body ::selection {
 }
 
 .logo-article-logo {
-    height: 50%;
+  height: 100px;
+  width: 300px;
+  background-image: url(../img/);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 #logo-logo-section {
-    padding: 30px;
-    color:black;
-    height: 30px;
-  
+   padding: 30px;
+   color:black;
+   height: 30px;
+ 
+}
+.fa .fa-cutlery{
+ color: white;
 }
 
 /*TESTIMONIAL SECTION*/
@@ -270,7 +277,6 @@ body ::selection {
 .slider-container{
     background-color: #213852;
     width: 100%;
-    height: 630px;
     display: flex;
     flex-direction: column;
 }
