--- a/css/contact.css
+++ b/css/contact.css
@@ -14,7 +14,7 @@
     margin-left: 0;
 }
 
-.row {
+.rows {
     display: flex;
     max-width: 1140px;
     margin: 0 auto;
@@ -23,8 +23,8 @@
 }
 
 .contact-form {
-    width: 60%;
-    margin: 0 auto;
+    width: 90%;
+    margin: 2vh auto;
 }
 
 input[type=text],
@@ -47,6 +47,6 @@ input[type=checkbox] {
 
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 480px) {
-    .contact-form {width: 100%; }
-  }
+    .contact-form {width: 90%; }
+}
   
