--- a/css/boxpark.css
+++ b/css/boxpark.css
@@ -193,6 +193,7 @@ body ::selection {
 .second-container {
     width: 100%;
     height: 500px;
+    background-color: #E8E3D9;
 }
 
 .second-container-small {
@@ -258,7 +259,7 @@ body ::selection {
 
 /*STRIP SECTION*/
 .strip-container{
-    background-color: white;
+    background-color: white !important;
     width: 100%;
     height: 300px;
     display: flex;
@@ -277,6 +278,7 @@ body ::selection {
     justify-content: space-around;
     width: 100%;
     height: 70%;
+
 }
 
 .logo-article-body{
@@ -309,12 +311,20 @@ body ::selection {
 .logo-article-logo {
   height: 100px;
   width: 300px;
-  background-image: url(../img/);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
 
+#logo-strip1{
+  background-image: url(../img/rayo-logo.png);
+}
+#logo-strip2{
+  background-image: url(../img/fire-logo.png);
+}
+#logo-strip3{
+  background-image: url(../img/guns-logo.png);
+}
 #logo-logo-section {
    padding: 30px;
    color:black;
@@ -380,9 +390,7 @@ body ::selection {
     overflow: hidden;
     padding: 20px;
   }
-#slider-container-small .btn-container{
-  
-  }
+
 #slider-container-small .btn {
     position: absolute;
     top: calc(50% - 30px);
@@ -546,9 +554,7 @@ body ::selection {
     .slider-title{
       font-size: 0.9em;
     }
-    .slider-container{
-  }
-  
+
   }
 
   @media only screen and (max-width: 471px) {
@@ -625,9 +631,7 @@ body ::selection {
 
 /*TEXT CONTAINER*/
 
-.main-boxpark-container{
-    /*background-color: #E8E3D9;*/
-}
+
 .text-container-boxpark{
     font-family: 'MonserratBold';
     margin: 0 auto;
@@ -637,31 +641,6 @@ body ::selection {
 
 
 /*MOBILE TRUSTPILOT*/
-
-@media (max-width: 1212px) {
-   
-  
-}
-
-@media (max-width: 1040px) {
- 
- 
-}
-@media (max-width: 1017px) {
- 
-
-  
-}
-
-@media (max-width: 971px) {
-
-}
-  
-
-
-@media (max-width: 869px) {
- 
- 
 
 @media (max-width: 633px) {
   .trustpilot-img-container{
@@ -675,10 +654,6 @@ body ::selection {
   }
 }
 
-
-@media (max-width: 576px) {
-
-}
 @media (max-width: 512px) {
   .articles-first-container {
     display: flex;
@@ -696,8 +671,7 @@ body ::selection {
 }
 
 @media (max-width: 380px) {
-  .trustpilot-img-container{
-  }
+
   .first-boxpark-container{
     padding: 0px;
 
