--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,6 @@
+#bunge-title{
+    font-family:"Bungee";
+}
 /*tag*/
 .span-1 {
     width: 32.26%;
@@ -16,15 +19,15 @@
 
 .rows {
     display: flex;
-    max-width: 1140px;
+    max-width: 94%;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
 }
 
 .contact-form {
-    width: 90%;
-    margin: 2vh auto;
+    width: 100%;
+    margin: 6vh auto;
 }
 
 input[type=text],
